[package]
name = "todo-api"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.19.1", features = ["full"] }
futures = { version = "0.3.17" }
axum = { version = "0.5.6" }
async-graphql = { version = "4.0.1" }
async-graphql-axum = { version = "4.0.1" }
anyhow = { version = "1.0.44" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68" }
mongodb = { version = "2.0.0" }
